fixing gap 'Notícias'

--- a/style.css
+++ b/style.css
@@ -706,6 +706,7 @@ nav {
 	gap: 0;
 	align-items: start;
 	border-radius: 0;
+	
 }
 .svg-content .svg-section span {
 	background: #3d4450;
@@ -735,7 +736,7 @@ nav {
 	background: #022241bb;
 	display: flex;
 	flex-direction: column;
-	gap: 5px;
+	gap: 10px;
 	padding: 20px;
 }
 .nav-card-img section .full-span span:first-child {
